--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,7 @@ body, html {
 }
 
 #dark .box, #dark .footer-box {
-    background-color: #fe68c2;
+    background-color: #100e1f;
 }
 
 #light .banner {
@@ -54,7 +54,6 @@ body, html {
 }
 
 #dark .return-address, #dark .address-input, #dark .add-network, #dark .send-button-disabled, #dark .back-button, #dark .contribute-button, #dark .send-button, #dark .react-select__control {
-    background-color: #fff;
     border: solid 1px #e55eaf;
 }
 
@@ -67,11 +66,11 @@ body, html {
 }
 
 #light .font, #light .back-button, #light a, #light .contribute-button, #light .address-input > input, #light .send-button, #light .react-select__single-value {
-    color: black;
+    color: white;
 }
 
 #dark .font, #dark .back-button, #dark a, #dark .contribute-button, #dark .address-input > input, #dark .send-button, #dark .react-select__single-value {
-    color: black;
+    color: white;
 }
 
 @media screen and (max-width: 1010px) {
